--- a/tutorial/discrete_exercise_solutions.ipynb
+++ b/tutorial/discrete_exercise_solutions.ipynb
@@ -70,19 +70,19 @@
    "outputs": [],
    "source": [
     "dslf = ns.DSLFactory()\n",
-    "dslf.concrete(\"0\", \"() -> f\", lambda: 0)\n",
-    "dslf.concrete(\"1\", \"() -> f\", lambda: 1)\n",
-    "dslf.concrete(\"2\", \"() -> f\", lambda: 2)\n",
-    "dslf.concrete(\"+\", \"(f, f) -> f\", lambda x, y: x + y)\n",
-    "dslf.concrete(\"-\", \"(f, f) -> f\", lambda x, y: x - y)\n",
+    "dslf.production(\"0\", \"() -> f\", lambda: 0)\n",
+    "dslf.production(\"1\", \"() -> f\", lambda: 1)\n",
+    "dslf.production(\"2\", \"() -> f\", lambda: 2)\n",
+    "dslf.production(\"+\", \"(f, f) -> f\", lambda x, y: x + y)\n",
+    "dslf.production(\"-\", \"(f, f) -> f\", lambda x, y: x - y)\n",
     "# BEGIN SOLUTION \"YOUR CODE HERE\"\n",
-    "dslf.concrete(\"*\", \"(f, f) -> f\", lambda x, y: x * y)\n",
-    "dslf.concrete(\"**\", \"(f, f) -> f\", lambda x, y: x ** y)\n",
-    "dslf.concrete(\"/\", \"(f, f) -> f\", lambda x, y: x / y)\n",
-    "dslf.concrete(\"sin\", \"f -> f\", np.sin)\n",
-    "dslf.concrete(\"sqrt\", \"f -> f\", np.sqrt)\n",
-    "dslf.concrete(\"<\", \"(f, f) -> b\", lambda x, y: x < y)\n",
-    "dslf.concrete(\"ite\", \"(b, f, f) -> f\", lambda cond, x, y: x if cond else y)\n",
+    "dslf.production(\"*\", \"(f, f) -> f\", lambda x, y: x * y)\n",
+    "dslf.production(\"**\", \"(f, f) -> f\", lambda x, y: x ** y)\n",
+    "dslf.production(\"/\", \"(f, f) -> f\", lambda x, y: x / y)\n",
+    "dslf.production(\"sin\", \"f -> f\", np.sin)\n",
+    "dslf.production(\"sqrt\", \"f -> f\", np.sqrt)\n",
+    "dslf.production(\"<\", \"(f, f) -> b\", lambda x, y: x < y)\n",
+    "dslf.production(\"ite\", \"(b, f, f) -> f\", lambda cond, x, y: x if cond else y)\n",
     "# END SOLUTION\n",
     "dslf.lambdas()\n",
     "dslf.prune_to(\"f -> f\")\n",
