--- a/notebooks/crim13replication-near-algorithm-results.ipynb
+++ b/notebooks/crim13replication-near-algorithm-results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,21 +27,22 @@
     "%matplotlib inline\n",
     "%cd /home/asehgal/neurosym-lib\n",
     "\n",
-    "import os\n",
     "import json\n",
+    "import os\n",
     "import pickle\n",
     "import time\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "from pathlib import Path\n",
+    "from typing import cast\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
     "import torch\n",
-    "from sklearn.metrics import classification_report, roc_curve, f1_score, hamming_loss\n",
+    "from sklearn.metrics import classification_report, f1_score, hamming_loss, roc_curve\n",
     "\n",
     "import neurosym as ns\n",
     "from neurosym.examples import near\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "LIST_LENGTH = 10"
    ]
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -461,33 +462,31 @@
     "with open(\"outputs/mice_results/expt4-fastagg-redo.pkl\", \"rb\") as f:\n",
     "    programs_list = pickle.load(f)\n",
     "\n",
+    "\n",
     "def train_module_parallel_worker(program_str, neural_dsl, cost, datamodule):\n",
     "    initialized_program = neural_dsl.initialize(program_str)\n",
     "    _ = cost.validation_heuristic.with_n_epochs(40).compute_cost(\n",
     "        neural_dsl, initialized_program, cost.embedding\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    feature_data = datamodule.test.inputs\n",
     "    labels = datamodule.test.outputs.flatten()\n",
     "    module = ns.examples.near.TorchProgramModule(neural_dsl, initialized_program)\n",
     "    # Evaluate the program\n",
-    "    metrics, pred_vals = eval_program(\n",
-    "        module,\n",
-    "        feature_data,\n",
-    "        labels\n",
-    "    )\n",
-    "    \n",
+    "    metrics, pred_vals = eval_program(module, feature_data, labels)\n",
+    "\n",
     "    return {\n",
-    "        'report': metrics,\n",
-    "        'true_vals': labels.tolist(),\n",
-    "        'pred_vals': pred_vals.tolist()\n",
+    "        \"report\": metrics,\n",
+    "        \"true_vals\": labels.tolist(),\n",
+    "        \"pred_vals\": pred_vals.tolist(),\n",
     "    }\n",
     "\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "with ThreadPoolExecutor(max_workers=4) as executor:\n",
     "    futures = [\n",
-    "        executor.submit(train_module_parallel_worker, prog['program'], neural_dsl, cost, datamodule)\n",
+    "        executor.submit(\n",
+    "            train_module_parallel_worker, prog[\"program\"], neural_dsl, cost, datamodule\n",
+    "        )\n",
     "        for prog in programs_list\n",
     "    ]\n",
     "\n",
@@ -519,8 +518,7 @@
     "\n",
     "#     programs_list[i]['report'] = metrics\n",
     "#     programs_list[i]['true_vals'] = labels.tolist()\n",
-    "#     programs_list[i]['pred_vals'] = pred_vals.tolist()\n",
-    "\n"
+    "#     programs_list[i]['pred_vals'] = pred_vals.tolist()\n"
    ]
   },
   {
@@ -563,7 +561,11 @@
    ],
    "source": [
     "%cd /home/asehgal/neurosym-lib\n",
-    "def bce_loss_flattened(predictions: torch.Tensor, targets: torch.Tensor) -> torch.Tensor:\n",
+    "\n",
+    "\n",
+    "def bce_loss_flattened(\n",
+    "    predictions: torch.Tensor, targets: torch.Tensor\n",
+    ") -> torch.Tensor:\n",
     "    \"\"\"\n",
     "    Compute the binary cross entropy loss with class weights for the Tiny CalMS21 dataset.\n",
     "    This is the same loss function used in the base NEAR implementation.\n",
@@ -590,19 +592,20 @@
     "        weight=torch.tensor([1.5], device=predictions.device),\n",
     "    )\n",
     "\n",
+    "\n",
     "weights = [\n",
     "    {\n",
-    "        \"weight\" : torch.tensor([0.0217]),\n",
-    "        \"bias\" : torch.tensor([-0.2785]),\n",
+    "        \"weight\": torch.tensor([0.0217]),\n",
+    "        \"bias\": torch.tensor([-0.2785]),\n",
     "    },\n",
     "    {\n",
-    "        \"weight\" : torch.tensor([-0.0007, 0.0055, 0.0051, -0.0025]),\n",
-    "        \"bias\" : torch.tensor([3.7426]),\n",
+    "        \"weight\": torch.tensor([-0.0007, 0.0055, 0.0051, -0.0025]),\n",
+    "        \"bias\": torch.tensor([3.7426]),\n",
     "    },\n",
     "    {\n",
-    "        \"weight\" : torch.tensor([-0.2143]),\n",
-    "        \"bias\" : torch.tensor([1.822]),\n",
-    "    }\n",
+    "        \"weight\": torch.tensor([-0.2143]),\n",
+    "        \"bias\": torch.tensor([1.822]),\n",
+    "    },\n",
     "]\n",
     "\n",
     "datamodule = ns.datasets.crim13_data_example(train_seed=0, batch_size=1024)\n",
@@ -623,7 +626,9 @@
     ")\n",
     "# cost.validation_heuristic = DisjointValidationCost.from_validation_cost(cost.validation_heuristic)\n",
     "\n",
-    "program_str = \"(map (ite (affine_bool_distance) (affine_acceleration) (affine_distance)))\"\n",
+    "program_str = (\n",
+    "    \"(map (ite (affine_bool_distance) (affine_acceleration) (affine_distance)))\"\n",
+    ")\n",
     "program = ns.parse_s_expression(program_str)\n",
     "initialized_program = neural_dsl.initialize(program)\n",
     "# module = ns.examples.near.TorchProgramModule(original_dsl, initialized_program)\n",
@@ -634,19 +639,15 @@
     "labels = datamodule.test.outputs.flatten()\n",
     "\n",
     "module = ns.examples.near.TorchProgramModule(neural_dsl, initialized_program)\n",
-    "_, raw_predictions = eval_program(\n",
-    "    module,\n",
-    "    feature_data,\n",
-    "    labels\n",
-    ")\n",
+    "_, raw_predictions = eval_program(module, feature_data, labels)\n",
     "# fpr, tpr, thresholds = roc_curve(labels, raw_predictions)\n",
     "# threshold = thresholds[np.argmax(tpr - fpr)]\n",
     "# pred_vals = (torch.sigmoid(torch.tensor(raw_predictions)) < threshold).int().tolist()\n",
     "\n",
     "reported_metrics = dict(\n",
     "    true_vals=labels.tolist(),\n",
-    "    pred_vals=pred_vals,\n",
-    "    report=compute_near_metrics(np.array(pred_vals), np.array(labels))\n",
+    "    pred_vals=raw_predictions,\n",
+    "    report=compute_near_metrics(np.array(raw_predictions), np.array(labels)),\n",
     ")"
    ]
   },
@@ -885,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -906,12 +907,15 @@
     "\n",
     "# construct N confusion matrices\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "confusion_matrices = {}\n",
     "for k in all_results:\n",
     "    confusion_matrices[k] = confusion_matrix(\n",
-    "        all_results[k][\"true_vals\"], threshold_predictions(y_scores=torch.tensor(all_results[k][\"pred_vals\"]), y_true=torch.tensor(all_results[k][\"true_vals\"]))\n",
+    "        all_results[k][\"true_vals\"],\n",
+    "        threshold_predictions(\n",
+    "            y_scores=torch.tensor(all_results[k][\"pred_vals\"]),\n",
+    "            y_true=torch.tensor(all_results[k][\"true_vals\"]),\n",
+    "        ),\n",
     "    )\n",
     "\n",
     "# plot the confusion matrices\n",
