reproducible mice near results

--- a/notebooks/crim13replication-near-algorithm-results.ipynb
+++ b/notebooks/crim13replication-near-algorithm-results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,8 +43,9 @@
     "\n",
     "import neurosym as ns\n",
     "from neurosym.examples import near\n",
+    "from neurosym.examples.near import ValidationCost\n",
     "\n",
-    "LIST_LENGTH = 10"
+    "# LIST_LENGTH = 10"
    ]
   },
   {
@@ -138,9 +139,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from neurosym.examples.near import ValidationCost\n",
-    "\n",
-    "\n",
     "class DisjointValidationCost(ValidationCost):\n",
     "    @classmethod\n",
     "    def from_validation_cost(cls, validation_cost):\n",
@@ -233,7 +231,7 @@
     "    )\n",
     "\n",
     "    # Search for programs with bounded A*\n",
-    "    iterator = ns.search.bounded_astar(g, max_depth=15)\n",
+    "    iterator = ns.search.bounded_astar(g, max_depth=10, frontier_capacity=8)\n",
     "\n",
     "    programs_list = []\n",
     "    start_time = time.time()\n",
@@ -432,8 +430,8 @@
     "\n",
     "# Trainer configuration\n",
     "trainer_cfg = near.NEARTrainerConfig(\n",
-    "    n_epochs=30,\n",
-    "    lr=1e-3,\n",
+    "    n_epochs=15,\n",
+    "    lr=1e-4,\n",
     "    loss_callback=bce_loss,\n",
     "    accelerator=\"cuda:0\",\n",
     ")\n",
@@ -986,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1013,19 +1011,19 @@
     }
    ],
    "source": [
-    "all_reports = {}\n",
-    "for k in all_results:\n",
-    "    all_reports[k] = all_results[k][\"report\"][\"report\"]\n",
-    "    all_reports[k][\"macro avg\"][\"time\"] = (\n",
-    "        all_results[k][\"time\"] if \"time\" in all_results[k] else 0\n",
-    "    )\n",
-    "    all_reports[k][\"macro avg\"][\"acc\"] = all_results[k][\"report\"][\"hamming_accuracy\"]\n",
+    "# all_reports = {}\n",
+    "# for k in all_results:\n",
+    "#     all_reports[k] = all_results[k][\"report\"][\"report\"]\n",
+    "#     all_reports[k][\"macro avg\"][\"time\"] = (\n",
+    "#         all_results[k][\"time\"] if \"time\" in all_results[k] else 0\n",
+    "#     )\n",
+    "#     all_reports[k][\"macro avg\"][\"acc\"] = all_results[k][\"report\"][\"hamming_accuracy\"]\n",
     "\n",
     "\n",
-    "all_reports = {k: all_reports[k][\"macro avg\"] for k in all_reports}\n",
-    "df = pd.DataFrame(all_reports).T\n",
-    "print(df.to_markdown())\n",
-    "# df.to_csv(\"outputs/mice_results/crim13_results.csv\")\n"
+    "# all_reports = {k: all_reports[k][\"macro avg\"] for k in all_reports}\n",
+    "# df = pd.DataFrame(all_reports).T\n",
+    "# print(df.to_markdown())\n",
+    "# # df.to_csv(\"outputs/mice_results/crim13_results.csv\")\n"
    ]
   },
   {
@@ -1057,19 +1055,19 @@
     }
    ],
    "source": [
-    "all_reports = {}\n",
-    "for k in all_results:\n",
-    "    all_reports[k] = all_results[k][\"report\"][\"report\"]\n",
-    "    all_reports[k][\"macro avg\"][\"time\"] = (\n",
-    "        all_results[k][\"time\"] if \"time\" in all_results[k] else 0\n",
-    "    )\n",
-    "    all_reports[k][\"macro avg\"][\"acc\"] = all_results[k][\"report\"][\"hamming_accuracy\"]\n",
+    "# all_reports = {}\n",
+    "# for k in all_results:\n",
+    "#     all_reports[k] = all_results[k][\"report\"][\"report\"]\n",
+    "#     all_reports[k][\"macro avg\"][\"time\"] = (\n",
+    "#         all_results[k][\"time\"] if \"time\" in all_results[k] else 0\n",
+    "#     )\n",
+    "#     all_reports[k][\"macro avg\"][\"acc\"] = all_results[k][\"report\"][\"hamming_accuracy\"]\n",
     "\n",
     "\n",
-    "all_reports = {k: all_reports[k][\"macro avg\"] for k in all_reports}\n",
-    "df = pd.DataFrame(all_reports).T\n",
-    "print(df.to_markdown())\n",
-    "df.to_csv(\"outputs/mice_results/crim13_results.csv\")\n"
+    "# all_reports = {k: all_reports[k][\"macro avg\"] for k in all_reports}\n",
+    "# df = pd.DataFrame(all_reports).T\n",
+    "# print(df.to_markdown())\n",
+    "# df.to_csv(\"outputs/mice_results/crim13_results.csv\")\n"
    ]
   },
   {
