--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -321,7 +321,7 @@
    "source": [
     "best_programs = list(\n",
     "    itertools.islice(\n",
-    "        ns.search.bounded_astar(g, max_depth=1000, max_iterations=10000), 5\n",
+    "        ns.search.BoundedAStar(max_depth=1000, max_iterations=10000), 5\n",
     "    )\n",
     ")"
    ]
