--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -628,7 +628,7 @@
    "source": [
     "best_programs = list(\n",
     "    itertools.islice(\n",
-    "        ns.search.BoundedAStar(max_depth=1000, max_iterations=10000), 5\n",
+    "        ns.search.BoundedAStar(max_depth=1000, max_iterations=10000)(g), 5\n",
     "    )\n",
     ")"
    ]
