--- a/notebooks/crim13replication-near-algorithm-results.ipynb
+++ b/notebooks/crim13replication-near-algorithm-results.ipynb
@@ -231,7 +231,7 @@
     "    )\n",
     "\n",
     "    # Search for programs with bounded A*\n",
-    "    iterator = ns.search.bounded_astar(g, max_depth=10, frontier_capacity=8)\n",
+    "    iterator = ns.search.BoundedAStar(max_depth=10, frontier_capacity=8)(g)\n",
     "\n",
     "    programs_list = []\n",
     "    start_time = time.time()\n",
@@ -279,7 +279,7 @@
     "\n",
     "    # Save the progr/ams_list to a pickle file\n",
     "    with open(output_path, \"wb\") as f:\n",
-    "        pickle.dump(programs_list, f)\n"
+    "        pickle.dump(programs_list, f)"
    ]
   },
   {
