--- a/tutorial/near_demo_behavior_classification.ipynb
+++ b/tutorial/near_demo_behavior_classification.ipynb
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -5265,7 +5265,7 @@
     "    cost=cost\n",
     ")\n",
     "\n",
-    "iterator = ns.search.bounded_astar(g, max_depth=max_depth)\n",
+    "iterator = ns.search.BoundedAStar(max_depth=max_depth)(g)\n",
     "best_program = None\n",
     "try:\n",
     "    best_program = next(iterator)\n",
