delete frontier capacity

--- a/notebooks/crim13replication-near-algorithm-results.ipynb
+++ b/notebooks/crim13replication-near-algorithm-results.ipynb
@@ -231,7 +231,7 @@
     "    )\n",
     "\n",
     "    # Search for programs with bounded A*\n",
-    "    iterator = ns.search.BoundedAStar(max_depth=10, frontier_capacity=8)(g)\n",
+    "    iterator = ns.search.BoundedAStar(max_depth=10)(g)\n",
     "\n",
     "    programs_list = []\n",
     "    start_time = time.time()\n",
