linting + metrics + custom validation logic

--- a/notebooks/near_reproduction/analyze_mice_results.ipynb
+++ b/notebooks/near_reproduction/analyze_mice_results.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,96 +48,8 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch\n",
-    "from sklearn.metrics import classification_report, f1_score, hamming_loss, roc_curve\n",
     "\n",
-    "import neurosym as ns\n",
-    "from neurosym.examples import near"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Helper Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def threshold_predictions(\n",
-    "    y_true: torch.Tensor, y_scores: torch.Tensor, threshold_type: str = \"quantile\"\n",
-    ") -> torch.Tensor:\n",
-    "    \"\"\"\n",
-    "    Apply dynamic thresholding to predictions.\n",
-    "    \n",
-    "    Args:\n",
-    "        y_true: Ground truth labels\n",
-    "        y_scores: Model prediction scores (logits)\n",
-    "        threshold_type: Type of thresholding ('quantile', 'roc', or 'static')\n",
-    "    \n",
-    "    Returns:\n",
-    "        Binary predictions\n",
-    "    \"\"\"\n",
-    "    if threshold_type == \"quantile\":\n",
-    "        threshold = np.quantile(y_scores, 1 - y_true.float().mean())\n",
-    "    elif threshold_type == \"roc\":\n",
-    "        fpr, tpr, thresholds = roc_curve(y_true, y_scores)\n",
-    "        threshold = thresholds[np.argmax(tpr - fpr)]\n",
-    "    elif threshold_type == \"static\":\n",
-    "        threshold = 0.5\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown threshold type: {threshold_type}\")\n",
-    "    \n",
-    "    predictions = (torch.sigmoid(y_scores) < threshold).int()\n",
-    "    return predictions\n",
-    "\n",
-    "\n",
-    "def compute_metrics(predictions: np.ndarray, ground_truth: np.ndarray):\n",
-    "    \"\"\"\n",
-    "    Compute evaluation metrics for predictions.\n",
-    "    \n",
-    "    Args:\n",
-    "        predictions: Raw prediction scores (logits)\n",
-    "        ground_truth: Ground truth labels\n",
-    "    \n",
-    "    Returns:\n",
-    "        Dictionary containing various metrics\n",
-    "    \"\"\"\n",
-    "    predictions = (\n",
-    "        threshold_predictions(\n",
-    "            torch.tensor(ground_truth, dtype=torch.float32),\n",
-    "            torch.tensor(predictions, dtype=torch.float32),\n",
-    "            threshold_type=\"quantile\",\n",
-    "        )\n",
-    "        .numpy()\n",
-    "        .flatten()\n",
-    "    )\n",
-    "    ground_truth = ground_truth.flatten()\n",
-    "    \n",
-    "    try:\n",
-    "        weighted_avg_f1 = f1_score(predictions, ground_truth, average=\"weighted\", zero_division=0)\n",
-    "        unweighted_avg_f1 = f1_score(predictions, ground_truth, average=\"macro\", zero_division=0)\n",
-    "        all_f1 = f1_score(predictions, ground_truth, average=None, zero_division=0)\n",
-    "        hamming_accuracy = 1 - hamming_loss(ground_truth, predictions)\n",
-    "    except ValueError as e:\n",
-    "        print(f\"Error computing metrics: {e}\")\n",
-    "        weighted_avg_f1 = 0.0\n",
-    "        unweighted_avg_f1 = 0.0\n",
-    "        all_f1 = []\n",
-    "        hamming_accuracy = 0.0\n",
-    "    \n",
-    "    report = classification_report(ground_truth, predictions, output_dict=True, zero_division=0)\n",
-    "    return {\n",
-    "        \"f1_score\": weighted_avg_f1,\n",
-    "        \"unweighted_f1\": unweighted_avg_f1,\n",
-    "        \"all_f1s\": all_f1,\n",
-    "        \"hamming_accuracy\": hamming_accuracy,\n",
-    "        \"report\": report,\n",
-    "    }"
+    "from neurosym.examples.near.validation import compute_metrics"
    ]
   },
   {
@@ -413,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +392,7 @@
     "# Reported program\n",
     "reported_df = df[df['experiment'] == 'reported_program']\n",
     "if not reported_df.empty:\n",
-    "    print(f\"\\nReported Program:\")\n",
+    "    print(\"\\nReported Program:\")\n",
     "    print(f\"  F1: {reported_df['f1_score'].values[0]:.6f}\")\n",
     "    print(f\"  Hamming Acc: {reported_df['hamming_accuracy'].values[0]:.6f}\")\n",
     "    print(f\"  Time: {reported_df['time'].values[0]:.2f}s\")\n",
