add raw outputs for near reproduction

--- a/notebooks/get_near_datasets.ipynb
+++ b/notebooks/get_near_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +141,7 @@
     "    \"label\" : \"labels\",\n",
     "    \"labels\" : \"labels\",\n",
     "}\n",
+    "# ballhandler\n",
     "\n",
     "for file_path in sorted(bball_folder.glob(\"*.npy\")):\n",
     "    split, typ = file_path.stem.replace(\"_basket\", \"\").split(\"_\")\n",
@@ -153,6 +154,7 @@
     "        np.savez_compressed(save_path, data)\n",
     "    elif typ in \"labels\":\n",
     "        labels = np.load(file_path, allow_pickle=True).astype(np.int64)\n",
+    "        is_ballhandler = (labels == 1).astype(np.int64)\n",
     "        print(save_path.stem, labels.shape, len(np.unique(labels)), labels.dtype)\n",
     "        np.savez_compressed(save_path, labels)\n"
    ]
