--- a/tutorial/bouncing_ball_exercise_solutions.ipynb
+++ b/tutorial/bouncing_ball_exercise_solutions.ipynb
@@ -357,12 +357,13 @@
     "            n_epochs=100,\n",
     "            accelerator=\"cpu\",\n",
     "            loss_callback=nn.functional.mse_loss,\n",
+    "            validation_metric=\"neg_l2_dist\",\n",
     "        ),\n",
     "        # neural_dsl=near.NeuralDSL.from_dsl(dsl, filler),\n",
     "        datamodule=datamodule,\n",
     "        progress_by_epoch=True,\n",
     "        embedding=embedding,\n",
-    "        structural_cost_penalty=0.2,\n",
+    "        structural_cost_penalty=1.0,\n",
     "        symbol_costs=symbol_costs,\n",
     "    ),\n",
     "    neural_hole_filler=filler,\n",
