add calms21 logs

--- a/notebooks/calms21_reproduction/analyze_calms21_results.ipynb
+++ b/notebooks/calms21_reproduction/analyze_calms21_results.ipynb
@@ -20,13 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "/home/asehgal/neurosym-lib\n"
      ]
     },
@@ -35,9 +37,7 @@
      "output_type": "stream",
      "text": [
       "/home/asehgal/neurosym-lib/.venv/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n",
-      "/home/asehgal/neurosym-lib/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: outputs/calms21_results/reproduction.pkl not found\n"
+      "  Loaded 20 programs from reproduction\n"
      ]
     }
    ],
@@ -128,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: outputs/calms21_results/reported_program.pkl not found\n"
+     ]
+    }
+   ],
    "source": [
     "reported_path = \"outputs/calms21_results/reported_program.pkl\"\n",
     "if Path(reported_path).exists():\n",
@@ -151,9 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total experiments: 20\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine all results\n",
     "all_results = {}\n",
@@ -168,9 +184,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "RESULTS COMPARISON\n",
+      "================================================================================\n",
+      "               experiment  precision   recall  f1_score  support  hamming_accuracy        time\n",
+      "neurosym_reproduction_000   0.716117 0.769554  0.729134   3000.0          0.774667 1124.241557\n",
+      "neurosym_reproduction_013   0.731255 0.538085  0.512690   3000.0          0.771667 1140.932573\n",
+      "neurosym_reproduction_003   0.734694 0.525219  0.487179   3000.0          0.768000 1136.015088\n",
+      "neurosym_reproduction_006   0.380000 0.500000  0.431818   3000.0          0.760000 1136.015306\n",
+      "neurosym_reproduction_016   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932780\n",
+      "neurosym_reproduction_015   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932734\n",
+      "neurosym_reproduction_014   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932673\n",
+      "neurosym_reproduction_004   0.379960 0.499781  0.431711   3000.0          0.759667 1136.015197\n",
+      "neurosym_reproduction_005   0.379960 0.499781  0.431711   3000.0          0.759667 1136.015255\n",
+      "neurosym_reproduction_017   0.546760 0.500512  0.434306   3000.0          0.759333 1140.932825\n",
+      "neurosym_reproduction_019   0.505013 0.500073  0.434083   3000.0          0.758667 1140.932909\n",
+      "neurosym_reproduction_018   0.505013 0.500073  0.434083   3000.0          0.758667 1140.932868\n",
+      "neurosym_reproduction_009   0.491084 0.499854  0.433971   3000.0          0.758333 1136.015444\n",
+      "neurosym_reproduction_008   0.479933 0.499635  0.433859   3000.0          0.758000 1136.015399\n",
+      "neurosym_reproduction_007   0.470802 0.499415  0.433748   3000.0          0.757667 1136.015354\n",
+      "neurosym_reproduction_010   0.470802 0.499415  0.433748   3000.0          0.757667 1136.015501\n",
+      "neurosym_reproduction_012   0.488986 0.497368  0.457522   3000.0          0.734333 1136.015587\n",
+      "neurosym_reproduction_002   0.399025 0.480446  0.426720   3000.0          0.726667 1124.241724\n",
+      "neurosym_reproduction_011   0.396920 0.478472  0.425646   3000.0          0.723667 1136.015545\n",
+      "neurosym_reproduction_001   0.474429 0.470541  0.470441   3000.0          0.582333 1124.241677\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Create comparison dataframe\n",
     "table_data = []\n",
@@ -232,9 +281,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SUMMARY STATISTICS\n",
+      "================================================================================\n",
+      "Total experiments: 20\n",
+      "\n",
+      "Best F1-score: 0.729134\n",
+      "  Experiment: neurosym_reproduction_000\n",
+      "\n",
+      "Best Hamming accuracy: 0.774667\n",
+      "  Experiment: neurosym_reproduction_000\n",
+      "\n",
+      "Average F1-score: 0.456891\n",
+      "Average Hamming accuracy: 0.747450\n",
+      "Average training time: 1135.97 seconds\n",
+      "\n",
+      "Neurosym-lib experiments: 20\n",
+      "  Avg F1: 0.456891\n",
+      "  Avg Hamming Acc: 0.747450\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nSUMMARY STATISTICS\")\n",
     "print(\"=\" * 80)\n",
@@ -281,9 +356,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved CSV to: outputs/calms21_results/comparison.csv\n",
+      "Saved Markdown to: outputs/calms21_results/comparison.md\n"
+     ]
+    }
+   ],
    "source": [
     "# Save CSV\n",
     "csv_path = \"outputs/calms21_results/comparison.csv\"\n",
@@ -309,9 +393,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 Programs by F1-score:\n",
+      "================================================================================\n",
+      "               experiment  precision   recall  f1_score  support  hamming_accuracy        time\n",
+      "neurosym_reproduction_000   0.716117 0.769554  0.729134   3000.0          0.774667 1124.241557\n",
+      "neurosym_reproduction_013   0.731255 0.538085  0.512690   3000.0          0.771667 1140.932573\n",
+      "neurosym_reproduction_003   0.734694 0.525219  0.487179   3000.0          0.768000 1136.015088\n",
+      "neurosym_reproduction_006   0.380000 0.500000  0.431818   3000.0          0.760000 1136.015306\n",
+      "neurosym_reproduction_016   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932780\n",
+      "neurosym_reproduction_015   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932734\n",
+      "neurosym_reproduction_014   0.380000 0.500000  0.431818   3000.0          0.760000 1140.932673\n",
+      "neurosym_reproduction_004   0.379960 0.499781  0.431711   3000.0          0.759667 1136.015197\n",
+      "neurosym_reproduction_005   0.379960 0.499781  0.431711   3000.0          0.759667 1136.015255\n",
+      "neurosym_reproduction_017   0.546760 0.500512  0.434306   3000.0          0.759333 1140.932825\n",
+      "\n",
+      "Program Details:\n",
+      "================================================================================\n",
+      "\n",
+      "neurosym_reproduction_000:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='affine_min_res_nose_dist', children=()),)),))\n",
+      "  F1: 0.729134, Hamming Acc: 0.774667, Time: 1124.24s\n",
+      "\n",
+      "neurosym_reproduction_013:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_speed', children=()), SExpression(symbol='affine_axis_ratio', children=()))),)),))\n",
+      "  F1: 0.512690, Hamming Acc: 0.771667, Time: 1140.93s\n",
+      "\n",
+      "neurosym_reproduction_003:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_acceleration', children=()), SExpression(symbol='affine_axis_ratio', children=()))),)),))\n",
+      "  F1: 0.487179, Hamming Acc: 0.768000, Time: 1136.02s\n",
+      "\n",
+      "neurosym_reproduction_006:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_acceleration', children=()), SExpression(symbol='affine_acceleration', children=()))),)),))\n",
+      "  F1: 0.431818, Hamming Acc: 0.760000, Time: 1136.02s\n",
+      "\n",
+      "neurosym_reproduction_016:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_speed', children=()), SExpression(symbol='affine_tangential_velocity', children=()))),)),))\n",
+      "  F1: 0.431818, Hamming Acc: 0.760000, Time: 1140.93s\n",
+      "\n",
+      "neurosym_reproduction_015:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_speed', children=()), SExpression(symbol='affine_speed', children=()))),)),))\n",
+      "  F1: 0.431818, Hamming Acc: 0.760000, Time: 1140.93s\n",
+      "\n",
+      "neurosym_reproduction_014:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_speed', children=()), SExpression(symbol='affine_acceleration', children=()))),)),))\n",
+      "  F1: 0.431818, Hamming Acc: 0.760000, Time: 1140.93s\n",
+      "\n",
+      "neurosym_reproduction_004:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_acceleration', children=()), SExpression(symbol='affine_tangential_velocity', children=()))),)),))\n",
+      "  F1: 0.431711, Hamming Acc: 0.759667, Time: 1136.02s\n",
+      "\n",
+      "neurosym_reproduction_005:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_acceleration', children=()), SExpression(symbol='affine_speed', children=()))),)),))\n",
+      "  F1: 0.431711, Hamming Acc: 0.759667, Time: 1136.02s\n",
+      "\n",
+      "neurosym_reproduction_017:\n",
+      "  Program: SExpression(symbol='output', children=(SExpression(symbol='running_avg_last10', children=(SExpression(symbol='add', children=(SExpression(symbol='affine_speed', children=()), SExpression(symbol='affine_min_res_nose_dist', children=()))),)),))\n",
+      "  F1: 0.434306, Hamming Acc: 0.759333, Time: 1140.93s\n"
+     ]
+    }
+   ],
    "source": [
     "# Show top 10 programs by F1 score\n",
     "print(\"\\nTop 10 Programs by F1-score:\")\n",
