--- a/tutorial/bouncing_ball_exercise_skeleton.ipynb
+++ b/tutorial/bouncing_ball_exercise_skeleton.ipynb
@@ -320,108 +320,10 @@
    },
    "outputs": [],
    "source": [
-    "b",
-    "e",
-    "s",
-    "t",
-    "_",
-    "p",
-    "r",
-    "o",
-    "g",
-    "r",
-    "a",
-    "m",
-    "s",
-    " ",
-    "=",
-    " ",
-    "l",
-    "i",
-    "s",
-    "t",
-    "(",
-    "\n",
-    " ",
-    " ",
-    " ",
-    " ",
-    "i",
-    "t",
-    "e",
-    "r",
-    "t",
-    "o",
-    "o",
-    "l",
-    "s",
-    ".",
-    "i",
-    "s",
-    "l",
-    "i",
-    "c",
-    "e",
-    "(",
-    "\n",
-    " ",
-    " ",
-    " ",
-    " ",
-    " ",
-    " ",
-    " ",
-    " ",
-    "n",
-    "s",
-    ".",
-    "s",
-    "e",
-    "a",
-    "r",
-    "c",
-    "h",
-    ".",
-    "A",
-    "S",
-    "t",
-    "a",
-    "r",
-    "(",
-    "m",
-    "a",
-    "x",
-    "_",
-    "i",
-    "t",
-    "e",
-    "r",
-    "a",
-    "t",
-    "i",
-    "o",
-    "n",
-    "s",
-    "=",
-    "1",
-    "0",
-    "0",
-    "0",
-    "0",
-    ")",
-    "(",
-    "g",
-    ")",
-    ",",
-    " ",
-    "5",
-    "\n",
-    " ",
-    " ",
-    " ",
-    " ",
-    ")",
-    "\n",
+    "best_programs = list(\n",
+    "    itertools.islice(\n",
+    "        ns.search.BoundedAStar(max_depth=1000, max_iterations=10000)(g), 5\n",
+    "    )\n",
     ")"
    ]
   },
